Bring Java server to parity with the C# server; target Java 21
Port the full C# feature set to the Java implementation and modernize the
toolchain. Compile-verified against the bundled Crystal SDK jars on JDK 21
(bytecode major version 65); runtime is not verified (needs Wine + Crystal).

HTTP API parity:
- Add /export, /export/poll (POST+GET), /analyzer, /analyzer/poll (POST+GET),
  /status and /healthz with the same poll/202/404/500 semantics as the C#
  controllers. Accept both gzip StreamedRequest JSON and multipart bodies.

Work queue:
- JDBC port of WorkQueue + WorkQueueSqlDefs + POCOs/enums (enqueue/dequeue/get/
  migrate/gc). Dialects for H2 (default; driver ships in lib/), SQLite,
  PostgreSQL and SQL Server. In-process ReportWorker polls the report and
  analyzer channels and stores results for the polling endpoints.

Rendering parity (Exporter):
- All export formats (PDF/Excel/ExcelDataOnly/Word/RTF/Text/CSV/Crystal) and
  the full Data binding set: parameters, sub-report data + parameters, record
  selection formula, formula-field text, suppress, can-grow, resize, sort,
  move-objects, connection-string stripping.
- ObjectText is intentionally not applied: the Java RAS SDK exposes ITextObject
  as read-only (no equivalent to .NET TextObject.Text); it logs and skips.

Analyzer:
- CrystalReportsAnalyzer + FullReportAnalysisResponse with PascalCase JSON
  matching the C# shape (cross-compatible with the C# client).

Security parity:
- AuthFilter: Basic OR JWT (HS256), constant-time comparison, fail-closed.
- JwtValidator: dependency-free HS256 validation (javax.crypto + gson).
- PollTokenProtector: HMAC caller-bound poll handles (raw-id passthrough when
  no key is configured).
- RequestReader: request-body cap + gzip decompression cap (zip-bomb guard).
- Config.validateSecurity(): refuses to start with default user/password.
- Connection-string secrets redacted from queue error messages.
- Remove ServerExport (was unauthenticated and unbounded) and ServerS